--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@ https://www.tooplate.com/view/2121-wave-cafe
                   </div>
                 </div>
                 <div class="tm-list-item">          
+                  <img src="img/js.png" alt="Image" class="tm-list-item-img">
+                  <div class="tm-black-bg tm-list-item-text">
+                    <h3 class="tm-list-item-name">JS</h3>
+                    <p class="tm-list-item-description">JavaScript is a powerful programming language that enables web developers to create dynamic and interactive experiences on the web.  </p>
+                  </div>
+                </div>
+                <div class="tm-list-item">          
                   <img src="img/jquery.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
                     <h3 class="tm-list-item-name">Jquery</h3>
@@ -323,10 +330,7 @@ https://www.tooplate.com/view/2121-wave-cafe
   </div>
     
   <!-- Background video -->
-  <div class="tm-video-wrapper">
-      <i id="tm-video-control-button" class="fas fa-pause"></i>
-    
-  </div>
+  
 
   <script src="js/jquery-3.4.1.min.js"></script>    
   <script>
