--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@ https://www.tooplate.com/view/2121-wave-cafe
         <div class="tm-left-inner">
           <div class="tm-site-header">
             <img height="170px" style="border-radius: 100px 100px;" src="img/2.jpg" alt="Image" class="tm-list-item-img tm-list-item-img-big">
-            <h1 class="tm-site-name">I'm Web developer</h1>
+            <h1 style="font-size: 1.2rem; font-style: Normal;" class="tm-site-name">I'm Rahul, I'm Web developer</h1>
           </div>
+         
           <br><br>
           <nav class="tm-site-nav">
             <ul class="tm-site-nav-ul">
@@ -137,7 +138,7 @@ https://www.tooplate.com/view/2121-wave-cafe
                 <div class="tm-list-item">          
                   <img src="img/grove.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Grove Tech Pvt LTD.<span class="tm-list-item-price">6 Months</span></h3>
+                    <h3 class="tm-list-item-name">Grove Tech Pvt LTD.</h3><h5><span class="tm-list-item-price">March 2019 - April 2020 (6 Months)</span></h5>
                     <p class="tm-list-item-description">
                       <ul>
                         <li>    Design and develop websites </li>
@@ -156,7 +157,7 @@ https://www.tooplate.com/view/2121-wave-cafe
                 <div class="tm-list-item">          
                   <img src="img/keron.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Keron Tech<span class="tm-list-item-price">1.5 year</span></h3>
+                    <h3 class="tm-list-item-name">Keron Tech<span class="tm-list-item-price"></span></h3><h5><span class="tm-list-item-price">May 2020 - September 2021 (1.5 years)</span></h5>
                     <p class="tm-list-item-description">    
                       <ul>
                         <li>Design and develop websites using various programming languages such as PHP</li>
