--- a/index.html
+++ b/index.html
@@ -192,16 +192,16 @@ https://www.tooplate.com/view/2121-wave-cafe
                   <img src="img/seneca.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
                     <h3 class="tm-list-item-name">Seneca Art & Technology College<span class="tm-list-item-price">2 years</span></h3>
-                    <p class="tm-list-item-description">Course: Computer Programming</p>        
-                    <p class="tm-list-item-description">Type: Sept 2021- Jan 2023</p>      
+                    <p class="tm-list-item-description">Course: Computer Programming (Diploma)</p>        
+                    <p class="tm-list-item-description">Duration: Sept 2021- Jan 2023</p>      
                   </div>
                 </div>
                 <div class="tm-list-item">          
                   <img src="img/cbpatel.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
                     <h3 class="tm-list-item-name">C B Patel Computer College<span class="tm-list-item-price">3 years</span></h3>
-                    <p class="tm-list-item-description">Course: Bachelor of computer application</p>        
-                    <p class="tm-list-item-description">Type: Sept 2017- Mar 2020</p>      
+                    <p class="tm-list-item-description">Course: Bachelor of computer application(Bachelor)</p>        
+                    <p class="tm-list-item-description">Duration: Sept 2017- Mar 2020</p>      
                   </div>
                 </div>
                          
