--- a/index.html
+++ b/index.html
@@ -238,6 +238,23 @@ https://www.tooplate.com/view/2121-wave-cafe
           <!-- Special Items Page -->
           <div id="special" class="tm-page-content">
             <div class="tm-special-items">
+                <div class="tm-black-bg tm-mb-20 tm-about-box-1">
+                <img src="img/xron.png" height="160px" width="320px" alt="Image">
+                <div class="tm-special-item-description">
+                  <h2 class="tm-text-primary tm-special-item-title">SAGA Blog's</h2>
+                  <p class="tm-special-item-text">
+                  <ul>
+  <li>SAGA Blogs is a dynamic platform that showcases captivating success and failure stories of businesses.</li>
+  <li>Leveraging the power of Node.js, MongoDB, Mongoose, EJS, JavaScript, and Bootstrap, this website allows users to explore, add, remove, and view blogs categorized by different business sectors.</li>
+  <li>Experience the seamless integration of cutting-edge technologies and engaging narratives on SAGA Blogs.</li>
+</ul>
+
+                  </p><br><br><br>
+                    Website Url : <a href="https://tame-tan-chimpanzee-veil.cyclic.app">SAGA BLOG ( URL: https://tame-tan-chimpanzee-veil.cyclic.app )</a>
+                    
+                  </div>
+              </div>
+            
               <div class="tm-black-bg tm-mb-20 tm-about-box-1">
                 <img src="img/quizz.webp"  height="160px" width="320px" alt="Image">
                 <div class="tm-special-item-description">
