--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ https://www.tooplate.com/view/2121-wave-cafe
           <div id="special" class="tm-page-content">
             <div class="tm-special-items">
                 <div class="tm-black-bg tm-mb-20 tm-about-box-1">
-                <img src="img/xron.png" height="160px" width="320px" alt="Image">
+                <img src="img/saga.png" height="160px" width="320px" alt="Image">
                 <div class="tm-special-item-description">
                   <h2 class="tm-text-primary tm-special-item-title">SAGA Blog's</h2>
                   <p class="tm-special-item-text">
