--- a/index.html
+++ b/index.html
@@ -238,6 +238,22 @@ https://www.tooplate.com/view/2121-wave-cafe
           <!-- Special Items Page -->
           <div id="special" class="tm-page-content">
             <div class="tm-special-items">
+
+              <div class="tm-black-bg tm-mb-20 tm-about-box-1">
+                <img src="img/React-App.png" height="160px" width="320px" alt="Image">
+                <div class="tm-special-item-description">
+                  <h2 class="tm-text-primary tm-special-item-title">Workout Buddy</h2>
+                  <p class="tm-special-item-text">
+                  <ul>
+  <li>WorkoutBuddy is a comprehensive fitness platform developed using the MERN (MongoDB, Express.js, React, Node.js) technology stack. It's designed to assist users in creating and maintaining personalized workout schedules.</li>
+  <li>Leveraging the power of Node.js, MongoDB, Mongoose, EJS, JavaScript, and Bootstrap, this website allows users to explore, add, remove, and view blogs categorized by different business sectors.</li>
+  <li>Whether you're a fitness enthusiast, a beginner looking to start your fitness journey, or someone aiming to stay healthy, WorkoutBuddy provides the tools and resources necessary to create effective workout routines</li>
+</ul>
+
+                  
+                  </div>
+              </div>
+
                 <div class="tm-black-bg tm-mb-20 tm-about-box-1">
                 <img src="img/saga.png" height="160px" width="320px" alt="Image">
                 <div class="tm-special-item-description">
